--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
     <section class="page-header">
       <h1 class="project-name">OpenSextant Gazetteer</h1>
       <h2 class="project-tagline">A geospatial gazetteer for use by the OpenSextant geotagger and also generally useful</h2>
+      <a href="https://github.com/OpenSextant/Gazetteer/releases/latest" class="btn">Latest Released Gazetteer</a>
       <a href="https://github.com/OpenSextant/Gazetteer" class="btn">View on GitHub</a>
-      <a href="https://github.com/OpenSextant/Gazetteer/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/OpenSextant/Gazetteer/tarball/master" class="btn">Download .tar.gz</a>
     </section>
 
     <section class="main-content">
