--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <h3>
 <a id="do-it-yourself" class="anchor" href="#do-it-yourself" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Do it yourself</h3>
 
-<p>OpenSextant use <a href="http://kettle.pentaho.com">Kettle ETL</a> to process and transform the publicly available gazetteer data into a clean consistent form used by the OpenSextant geotagger. </p>
+<p>OpenSextant use <a href="http://kettle.pentaho.com">Kettle ETL</a> to process and transform the publicly available gazetteer data into the form used by the OpenSextant geotagger. </p>
 
 <ul>
 <li>Get and install Kettle
